--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
 			var img=document.getElementById("card")
 			var zb=document.getElementById("zb")
 			$('#card').rotate({animateTO:180});
-			zb.style.backgroundImage="url(img/6a6224d3572c11df63b5f2706a2762d0f603c2bd.jpg)"
+			zb.style.backgroundImage="url(img/archer.png)"
 //			img.src="img/6b9cb4d0f703918f70837099583d269758eec44b.jpg"
 			setTimeout(function(){
 				var img=document.getElementById("card")
 				carda=document.getElementById("bh")
 				carda.className="cardb"
-				img.src="img/heizhende.jpg"
+// 				img.src="img/heizhende.jpg"
+				img.src="img/saberarcher.png"
 				 $("#zb").animate({ 
   				height: "0px", 
   									}, 2000 );
