--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>弓呆玄学</title>
+		<title>弓凛玄学</title>
 	</head>
 	<script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" src="js/jquery.rotate.min.js"></script>
