--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				carda=document.getElementById("bh")
 				carda.className="cardb"
 // 				img.src="img/heizhende.jpg"
-				img.src="img/saberarcher.png"
+				img.src="img/archerlin.png"
 				 $("#zb").animate({ 
   				height: "0px", 
   									}, 2000 );
